--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "epilogue": "^0.7.1",
     "express": "^4.17.1",
+    "express-cache-controller": "^1.1.0",
     "html": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.3",
