--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-input-tag": "^2.0.6",
     "vue-router": "^3.0.6",
     "vue2-datepicker": "^2.12.0",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
