--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "start": "cd ./server && node server.js",
-    "start_sqlite": "cd ./server && $typeDB=sqlite node server.js",
-    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
     "debug": "cd ./server && node --nolazy --inspect-brk=9229 server.js",
-    "server_and_client": "PORT=8080 npm run start & PORT=8081 npm run serve"
+    "server_and_client": "PORT=8080 npm run start & PORT=8081 npm run serve",
+    "start": "cd ./server && node server.js",
+    "start_sqlite": "cd ./server && $typeDB=sqlite node server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -43,15 +43,14 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "^3.8.4",
+    "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "engines": {
-    "node": "8.x"
   },
   "eslintConfig": {
     "root": true,
@@ -65,7 +64,18 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "postcss": {
     "plugins": {
@@ -76,5 +86,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": "8.x"
+  }
 }
