--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue": "^2.6.10",
     "vue-input-tag": "^2.0.6",
     "vue-router": "^3.0.6",
+    "vue-slider-component": "^3.1.1",
     "vue2-datepicker": "^2.12.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.3"
