--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "epilogue": "^0.7.1",
     "express": "^4.17.1",
     "express-cache-controller": "^1.1.0",
+    "firebase-admin": "^8.10.0",
+    "firebase-tools": "^8.0.1",
     "html": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.3",
     "node-sass": "^4.12.0",
     "noty": "^3.2.0-beta",
+    "npm": "^6.14.4",
     "path": "^0.12.7",
     "pug": "^2.0.4",
     "sass-loader": "^7.1.0",
+    "semantic-ui-css": "^2.4.1",
     "sequelize": "^4.44.0",
     "sqlite3": "^4.0.9",
     "uuid": "^3.3.2",
@@ -50,6 +54,7 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
+    "firebase": "^7.13.2",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
   },
