--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "app-root-path": "^2.2.1",
     "axios": "^0.18.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.11.0",
     "cors": "^2.8.5",
     "epilogue": "^0.7.1",
     "express": "^4.17.1",
