--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
+    "eslint": "eslint --fix",
     "debug": "cd ./server && node --nolazy --inspect-brk=9229 server.js",
     "start": "cd ./server && node server.js"
   },
@@ -47,13 +48,19 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-service": "^3.8.4",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.2",
+    "cross-env": "^7.0.2",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^5.2.3",
     "firebase": "^7.13.2",
-    "vue-loader": "^15.7.0",
     "sass-loader": "^7.1.0",
+    "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
