--- a/package.json
+++ b/package.json
@@ -1,104 +1,105 @@
 {
-  "name": "vuejs_shop",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint --fix",
-    "eslint": "eslint --fix",
-    "debug": "cd ./server && node --nolazy --inspect-brk=9229 server.js",
-    "start": "cd ./server && node server.js"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "app-root-path": "^2.2.1",
-    "axios": "^0.18.1",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.11.0",
-    "cors": "^2.8.5",
-    "epilogue": "^0.7.1",
-    "express": "^4.17.1",
-    "express-cache-controller": "^1.1.0",
-    "firebase-admin": "^8.10.0",
-    "firebase-tools": "^8.0.1",
-    "html": "^1.0.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.6.3",
-    "node-sass": "^4.12.0",
-    "noty": "^3.2.0-beta",
-    "npm": "^6.14.4",
-    "path": "^0.12.7",
-    "pug": "^2.0.4",
-    "semantic-ui-css": "^2.4.1",
-    "uuid": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-input-tag": "^2.0.6",
-    "vue-router": "^3.0.6",
-    "vue-slider-component": "^3.1.1",
-    "vue2-datepicker": "^2.12.0",
-    "vuelidate": "^0.7.4",
-    "vuex": "^3.1.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
-    "@vue/cli-service": "^3.8.4",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.0.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^5.2.3",
-    "firebase": "^7.13.2",
-    "sass-loader": "^7.1.0",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "engines": {
-    "node": "8.x"
-  }
+	"name": "vuejs_shop",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"dev": "vue-cli-service serve --mode development",
+		"build": "vue-cli-service build",
+		"test:unit": "vue-cli-service test:unit",
+		"lint": "vue-cli-service lint --fix",
+		"eslint": "eslint --fix",
+		"debug": "cd ./server && node --nolazy --inspect-brk=9229 server.js",
+		"start": "cd ./server && node server.js"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.19",
+		"@fortawesome/free-solid-svg-icons": "^5.9.0",
+		"@fortawesome/vue-fontawesome": "^0.1.6",
+		"app-root-path": "^2.2.1",
+		"axios": "^0.18.1",
+		"bootstrap": "^4.4.1",
+		"bootstrap-vue": "^2.11.0",
+		"cors": "^2.8.5",
+		"epilogue": "^0.7.1",
+		"express": "^4.17.1",
+		"express-cache-controller": "^1.1.0",
+		"firebase-admin": "^8.10.0",
+		"firebase-tools": "^8.0.1",
+		"html": "^1.0.0",
+		"moment": "^2.24.0",
+		"mongoose": "^5.6.3",
+		"node-sass": "^4.12.0",
+		"noty": "^3.2.0-beta",
+		"npm": "^6.14.4",
+		"path": "^0.12.7",
+		"pug": "^2.0.4",
+		"semantic-ui-css": "^2.4.1",
+		"uuid": "^3.3.2",
+		"vue": "^2.6.10",
+		"vue-input-tag": "^2.0.6",
+		"vue-router": "^3.0.6",
+		"vue-slider-component": "^3.1.1",
+		"vue2-datepicker": "^2.12.0",
+		"vuelidate": "^0.7.4",
+		"vuex": "^3.1.3"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^3.8.0",
+		"@vue/cli-plugin-eslint": "^3.8.0",
+		"@vue/cli-plugin-unit-jest": "^4.2.3",
+		"@vue/cli-service": "^3.8.4",
+		"@vue/eslint-config-prettier": "^6.0.0",
+		"@vue/test-utils": "1.0.0-beta.31",
+		"babel-eslint": "^10.0.2",
+		"cross-env": "^7.0.2",
+		"eslint": "^5.16.0",
+		"eslint-config-airbnb-base": "^14.2.0",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-vue": "^5.2.3",
+		"firebase": "^7.13.2",
+		"sass-loader": "^7.1.0",
+		"vue-loader": "^15.7.0",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"rules": {},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		},
+		"overrides": [
+			{
+				"files": [
+					"**/__tests__/*.{j,t}s?(x)",
+					"**/tests/unit/**/*.spec.{j,t}s?(x)"
+				],
+				"env": {
+					"jest": true
+				}
+			}
+		]
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
+	"engines": {
+		"node": "8.x"
+	}
 }
