--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"firebase-tools": "^8.0.1",
 		"html": "^1.0.0",
 		"moment": "^2.24.0",
+		"mongodb": "^3.6.3",
 		"mongoose": "^5.6.3",
 		"node-sass": "^4.12.0",
 		"noty": "^3.2.0-beta",
