--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"firebase-admin": "^8.10.0",
 		"firebase-tools": "^8.0.1",
 		"html": "^1.0.0",
+		"logrocket": "^2.1.3",
 		"moment": "^2.24.0",
 		"mongodb": "^3.6.3",
 		"mongoose": "^5.6.3",
